argocd/manifests/tailscale-operator/ingress-forge.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forge-tailscale
  namespace: tailscale
  annotations:
    tailscale.com/proxy-class: "default"
    tailscale.com/proxy-group: "ingress"
    tailscale.com/tags: "tag:k8s,tag:flyio-target"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: forge-external
      port:
        number: 3001
  tls:
    - hosts:
        - forge
